--- a/src/log_config.template.yaml
+++ b/src/log_config.template.yaml
@@ -7,6 +7,12 @@ entity_id: "<ENTITY_ID_REF>"   # unique identifier attribute for the entity
 events:
   path: "<YOUR_PATH_TO_EVENTS_CSV>"    # path to the event table
   attr: ["<EVENT_ATTRS>"]   # attributes to retrieve from the event table
+  attr_types: # not needed if the attribute is of string type
+  # supported types so far: String, Integer, Datetime, Float, Boolean
+    attr_1: "<TYPE_1>"
+    attr_2: "<TYPE_2>"
+    # add more attributes as needed
+    # attr_name: "<TYPE>"
 
 # entities data: type, path (absolute), and attributes
 entities:
@@ -14,8 +20,14 @@ entities:
     type: "<ENTITY_TYPE_1>"
     path: "<YOUR_PATH_TO_ENTITY_1>"
     attr: ["<ENTITY_1_ATTRS>"]
+    attr_types: 
+      attr_1: "<TYPE_1>"
+      attr_2: "<TYPE_2>" 
   entity_2:
     type: "<ENTITY_TYPE_2>"
     path: "<YOUR_PATH_TO_ENTITY_2>"
     attr: ["<ENTITY_2_ATTRS>"]
+    attr_types: 
+      attr_1: "<TYPE_1>"
+      attr_2: "<TYPE_2>"
 
